@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class MemoryVoucherRepository implements VoucherRepository {
 
@@ -21,7 +20,7 @@ public class MemoryVoucherRepository implements VoucherRepository {
   public List<Voucher> findAll() {
     return voucherStorage.values()
             .stream()
-            .collect(Collectors.toList());
+            .toList();
   }
 
 }
